crates/config/tests/snapshots/hash_edge.snap
---
source: crates/config/tests/snapshots.rs
---
# hash-edge

## Input

```mical
#
#noargs
#directive with args
  #indented_hash value
# comment with space

```

## JSON

```json
{}
```

vim:ft=markdown
