crates/config/tests/snapshots/hash_newline_mid_file.snap
---
source: crates/config/tests/snapshots.rs
---
# hash-newline-mid-file

## Input

```mical
#
k v

```

## JSON

```json
{
  "k": "v"
}
```

vim:ft=markdown
