crates/config/tests/snapshots/integer_invalid_radix_digits.snap
---
source: crates/config/tests/snapshots.rs
---
# integer-invalid-radix-digits

## Input

```mical
a 0b2
b 0o8
c 0xG

```

## Config Error

```
invalid digits for radix in '0b2' at 2..5
invalid digits for radix in '0o8' at 8..11
```

## JSON

```json
{
  "c": "0xG"
}
```

vim:ft=markdown
