crates/config/tests/snapshots/integer_large.snap
---
source: crates/config/tests/snapshots.rs
---
# integer-large

## Input

```mical
a 99999999999999999999999999999999999999999999999999
b -99999999999999999999999999999999999999999999999999
c 0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF

```

## JSON

```json
{
  "a": 99999999999999999999999999999999999999999999999999,
  "b": -99999999999999999999999999999999999999999999999999,
  "c": 1461501637330902918203684832716283019655932542975
}
```

vim:ft=markdown
