crates/config/tests/snapshots/integer_leading_zeros.snap
---
source: crates/config/tests/snapshots.rs
---
# integer-leading-zeros

## Input

```mical
a 007
b 00

```

## JSON

```json
{
  "a": 7,
  "b": 0
}
```

vim:ft=markdown
