crates/config/tests/snapshots/integer_multiple_trailing_spaces.snap
---
source: crates/config/tests/snapshots.rs
---
# integer-multiple-trailing-spaces

## Input

```mical
a 42   
b -7   

```

## JSON

```json
{
  "a": 42,
  "b": -7
}
```

vim:ft=markdown
