crates/config/tests/snapshots/integer_octal.snap
---
source: crates/config/tests/snapshots.rs
---
# integer-octal

## Input

```mical
a 0o77
b 0o0
c 0o777

```

## JSON

```json
{
  "a": 63,
  "b": 0,
  "c": 511
}
```

vim:ft=markdown
